still not fixed, trying the x on mobile again

--- a/style.css
+++ b/style.css
@@ -367,7 +367,7 @@ select:focus {
     }
 
     .close {
-        margin-right: 10px;
+        margin-right: 20px;
     }
 
 }
